--- a/_config.yml
+++ b/_config.yml
@@ -310,16 +310,44 @@ compress_html:
     envs: development
 
 
-# Defaults
+# # Defaults
+# defaults:
+#   # _posts
+#   - scope:
+#       path: ""
+#       type: posts
+#     values:
+#       layout: single
+#       author_profile: true
+#       read_time: true
+#       comments: # true
+#       share: true
+#       related: true
+
 defaults:
-  # _posts
-  - scope:
+  # _pages
+  -
+    scope:
       path: ""
-      type: posts
+      type: "pages"
     values:
       layout: single
       author_profile: true
       read_time: true
+      classes: wide
       comments: # true
-      share: true
       related: true
+      
+  # _posts
+  -
+    scope:
+      path: ""
+      type: "posts"
+    values:
+      layout: single
+      author_profile: true
+      read_time: true
+      classes: wide
+      comments: # true
+      related: true
+
