--- a/_config.yml
+++ b/_config.yml
@@ -345,7 +345,7 @@ defaults:
       type: "posts"
     values:
       layout: single
-      author_profile: true
+      author_profile: false
       read_time: true
       classes: wide
       comments: # true
