--- a/_config.yml
+++ b/_config.yml
@@ -345,9 +345,9 @@ defaults:
       type: "posts"
     values:
       layout: single
-      author_profile: false
+      author_profile: true
       read_time: true
-      classes: wide
+      # classes: wide
       comments: # true
       related: true
 
