--- a/_config.yml
+++ b/_config.yml
@@ -113,11 +113,11 @@ analytics:
 
 # Site Author
 author:
-  name             : "Your Name"
-  avatar           : # path of avatar image, e.g. "/assets/images/profile.gif"
-  bio              : "I am a person."
+  name             : "myneighborh"
+  avatar           : "/assets/images/profile.gif"
+  bio              : "jeaha03@gmail.com"
   location         : 
-  email            : jeaha03@gmail.com
+  email            :
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
