--- a/_config.yml
+++ b/_config.yml
@@ -115,7 +115,7 @@ analytics:
 author:
   name             : "김재현"
   avatar           : "/assets/images/profile.gif"
-  bio              : "jeaha03@gmail.com"
+  bio              : "?"
   location         : 
   email            :
   links:
