--- a/_config.yml
+++ b/_config.yml
@@ -113,7 +113,7 @@ analytics:
 
 # Site Author
 author:
-  name             : "김재현"
+  name             : "Jaehyeon Kim"
   avatar           : "/assets/images/profile.gif"
   bio              : "?"
   location         : 
