--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt"
 # Site Settings
 locale                   : "en-US"
 rtl                      : # true, false (default) # turns direction of the page into right to left for RTL languages
-title                    : "Unknown"
+title                    : "Susuwatari"
 title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
 name                     : "Jaehyeon Kim"
@@ -115,7 +115,7 @@ analytics:
 author:
   name             : "Jaehyeon Kim"
   avatar           : "/assets/images/profile.gif"
-  bio              : "?"
+  bio              : "I've been trying to get straight."
   location         : 
   email            :
   links:
