--- a/_config.yml
+++ b/_config.yml
@@ -115,7 +115,7 @@ analytics:
 author:
   name             : "Jaehyeon Kim"
   avatar           : "/assets/images/profile.gif"
-  bio              : "I've been trying to get straight."
+  bio              : "I'm trying to get straight."
   location         : 
   email            :
   links:
